feat: add manager endpoints documentation
